--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -67,7 +67,7 @@
       </div>
       <div class="modal-footer">
         <div class="col-xs-6"><button class="btn btn-block ink-reaction btn-primary-light" data-dismiss="modal">Cancel</button></div>
-        <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light" data-dismiss="offcanvas">Go!</button></div>
+        <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light" data-dismiss="modal">Go!</button></div>
       </div>
     </div>
   </div>
