project-create working, expand to filtered, redirect-to-created, login all working!

--- a/kontext/src/app/app.component.html
+++ b/kontext/src/app/app.component.html
@@ -1,10 +1,2 @@
 
-<app-nav></app-nav>
-
-<app-content></app-content>
-
-<app-project-tree></app-project-tree>
-
-<app-filter></app-filter>
-
-<ngx-toasta [position]="'bottom-fullwidth'"></ngx-toasta>
+<router-outlet></router-outlet>
