--- a/kontext/src/app/content/details/project-details.component.html
+++ b/kontext/src/app/content/details/project-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="project">
   <div class="section-header">
     <ol class="breadcrumb">
-      <li><a routerLink="/home">home</a></li>
+      <li><a routerLink="/">home</a></li>
       <li class="active">{{project.name}}</li>
     </ol>
   </div>
