--- a/kontext/src/app/login/login.component.html
+++ b/kontext/src/app/login/login.component.html
@@ -8,27 +8,32 @@
           <br/>
           <span class="text-lg text-bold text-primary">KTEK</span>
           <br/><br/>
-          <form role="form" class="form floating-label">
-            <div class="form-group">
+          <form name="form" class="form floating-label" (ngSubmit)="f.form.valid && login()"
+                #f="ngForm" novalidate>
+            <div class="form-group" [ngClass]="{'has-error': f.submitted && !username.valid}">
+              <label for="username">UserName </label>
               <input type="text"
-                     [(ngModel)]="user.username"
+                     [(ngModel)]="model.username"
+                     #username="ngModel"
                      name="username"
                      id="username"
-                     class="form-control">
-               <label for="username">UserName </label>
+                     class="form-control" required>
+              <div class="help-block" *ngIf="f.submitted && !username.valid"> Username is required</div>
             </div>
-            <div class="form-group">
+            <div class="form-group" [ngClass]="{'has-error': f.submitted && !password.valid}">
+              <label for="password">Password</label>
               <input type="password"
-                     [(ngModel)]="user.password"
+                     [(ngModel)]="model.password"
+                     #password="ngModel"
                      name="password"
                      id="password"
-                     class="form-control">
-              <label for="password">Password</label>
-              <p class="help-block"><a href="#">Forgotten?</a></p>
+                     class="form-control" required>
+              <div class="help-block" *ngIf="f.submitted && !password.valid"> Password is required</div>
             </div>
+            <p class="help-block"><a href="#">Forgotten?</a></p>
             <br>
-            <div class="text-right">
-              <button class="btn btn-primary btn-raised" (click)="onLoginClick()">Login</button>
+            <div class="form-group">
+              <button [disabled]="loading" class="btn btn-primary btn-raised">Login</button>
             </div>
           </form>
         </div>
@@ -36,4 +41,43 @@
     </div>
   </div>
 </section>
+<!-- LOGIN MODAL-->
 
+<!--<div class="modal fade"-->
+     <!--id="loginModal"-->
+     <!--tabindex="-1"-->
+     <!--role="dialog"-->
+     <!--aria-labelledby="formModalLabel"-->
+     <!--aria-hidden="true"-->
+     <!--style="display: none;">-->
+  <!--<div class="modal-dialog modal-lg" style="width: 75%">-->
+    <!--<div class="modal-content">-->
+      <!--<div class="modal-header">-->
+       <!--<span class="text-lg text-bold text-primary">KTEK</span>-->
+      <!--</div>-->
+      <!--<form role="form" class="form floating-label">-->
+        <!--<div class="form-group">-->
+          <!--<input type="text"-->
+                 <!--[(ngModel)]="user.username"-->
+                 <!--name="username"-->
+                 <!--id="username"-->
+                 <!--class="form-control">-->
+           <!--<label for="username">UserName </label>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+          <!--<input type="password"-->
+                 <!--[(ngModel)]="user.password"-->
+                 <!--name="password"-->
+                 <!--id="password"-->
+                 <!--class="form-control">-->
+          <!--<label for="password">Password</label>-->
+          <!--<p class="help-block"><a href="#">Forgotten?</a></p>-->
+        <!--</div>-->
+        <!--<br>-->
+        <!--<div class="text-right">-->
+          <!--<button class="btn btn-primary btn-raised" (click)="onLoginClick()">Login</button>-->
+        <!--</div>-->
+      <!--</form>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
